# pybind11

./: .gitignore  .travis.yml  CMakeLists.txt  NEWS.rst  README.rst  buildbot.py  lock_version_resolve.json  resolve.json  waf  wscript
.github/workflows/: cmake.yml  cpp-external.yml  cxx_mkspecs.yml  gcc-problem-matcher.json  linux_waf.yml  nodebug.yml
example/: hello_world.cpp
test/: wscript_build
